--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <figure>
               <blockquote class="mt-4 text-lg font-semibold text-white sm:text-xl sm:leading-8">
                 <p>If you feel like you're behind where you should be with retirement savings, or don't know where to start with a better tax plan, don't worry- that's how most people feel!</p>
-                <p>Learn how to reduce your tax bill, save more for retirement, and understand the best options for paying for college. If you're looking for someone to just do bookkeeping and file your taxes at the last minute, I'm not your guy.</p>                
+                <p class="mt-6">Learn how to reduce your tax bill, save more for retirement, and understand the best options for paying for college. If you're looking for someone to just clean up your bookkeeping and file your taxes at the last minute, I'm probably not your guy.</p>                
               </blockquote>
               <figcaption class="mt-12 text-base text-white">
                 <a href="https://cal.com/jedwood/discovery" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-lime-950 shadow-sm hover:bg-lime-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lime-500">Book a free call</a>
