--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <figure>
               <blockquote class="mt-4 text-lg font-semibold text-white sm:text-xl sm:leading-8">
                 <p>If you feel like you're behind where you should be with retirement savings, or don't know where to start with a better tax plan, don't worry- that's how most people feel!</p>
-                <p class="mt-6">Learn how to reduce your tax bill, save more for retirement, and understand the best options for paying for college. If you're looking for someone to just clean up your bookkeeping and file your taxes at the last minute, I'm probably not your guy.</p>                
+                <p class="mt-6">Learn how to reduce your tax bill, save more for retirement, and understand the best options for paying for college.</p>                
               </blockquote>
               <figcaption class="mt-12 text-base text-white">
                 <a href="https://cal.com/jedwood/discovery" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-lime-950 shadow-sm hover:bg-lime-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lime-500">Book a free call</a>
@@ -78,7 +78,7 @@
         </div>        
       </div>
 
-      <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-40 lg:px-8">
+      <div class="mx-auto mt-16 max-w-7xl px-6 sm:mt-40 lg:px-8">
 
         <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-none">
           <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Hi 👋 I'm Jed.</h2>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="flex">              
-          <dl class="sm:mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3">            
+          <dl class="sm:mx-auto mt-12 sm:mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-10 sm:gap-y-16 text-base leading-7 md:grid-cols-3 lg:mx-0 lg:max-w-none">            
             <div class="gap-y-1">
               <dt class="text-xl font-semibold text-lime-950">Small Business Savvy</dt>
               <ul class="list-disc list-inside">
@@ -119,7 +119,7 @@
               </ul>
             </div>
             <div class="flex flex-col gap-y-1">
-              <dt class="text-xl font-semibold text-lime-950">Retirement &amp; Education Solutions:</dt>
+              <dt class="text-xl font-semibold text-lime-950">Retirement &amp; Education Solutions</dt>
               <ul class="list-disc list-inside">
                 <li class="text-base leading-7 text-gray-600">Self-directed: Solo401(k), IRA, &amp; even HSA</li>
                 <li class="text-base leading-7 text-gray-600">Real estate investments</li>
@@ -133,11 +133,20 @@
           </dl>
         </div>
 
+        <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-none">        
+          <div class="mt-12">
+            <div class="lg:w-full lg:max-w-2xl lg:flex-auto">
+              <p class="text-xl leading-8 text-gray-600">If you're looking for someone to just clean up your bookkeeping and file your taxes at the last minute, I'm probably not your guy.
+              </p>              
+            </div>            
+          </div>
+        </div>
+        
       </div>
 
   
       <!-- CTA section -->
-      <div class="relative -z-10 mt-28 px-6 py-32 bg-lime-950 lg:px-8">        
+      <div class="relative -z-10 mt-20 px-6 py-24 bg-lime-950 lg:px-8">        
         <div class="mx-auto max-w-2xl text-center">
           <h2 class="text-1xl font-bold tracking-tight text-white sm:text-2xl mb-4">Let's chat.</h2>
           <a href="https://cal.com/jedwood/discovery" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-lime-950 shadow-sm hover:bg-lime-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lime-500">Book a free call</a>
