--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
   
       <!-- CTA section -->
-      <div class="relative -z-10 mt-20 px-6 py-24 bg-lime-950 lg:px-8">        
+      <div class="mt-20 px-6 py-24 bg-lime-950 lg:px-8">        
         <div class="mx-auto max-w-2xl text-center">
           <h2 class="text-1xl font-bold tracking-tight text-white sm:text-2xl mb-4">Let's chat.</h2>
           <a href="https://cal.com/jedwood/discovery" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-lime-950 shadow-sm hover:bg-lime-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lime-500">Book a free call</a>
