--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
         
       </div>
 
+      <div class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">        
+        
+        <div class="aspect-video">
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/YQ7dpV9TsSc?rel=0&modestbranding=1&controls=0" frameborder="0" allowfullscreen></iframe>
+        </div>        
+
+        <div class="aspect-video">
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/X0QFQVc9MS0?rel=0&modestbranding=1&controls=0" frameborder="0" allowfullscreen></iframe>
+        </div>        
+
+        <div class="aspect-video">
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/juYf6fk2nbo?rel=0&modestbranding=1&controls=0" frameborder="0" allowfullscreen></iframe>
+        </div>        
+  
+        <!-- More posts... -->
+      </div>
+
   
       <!-- CTA section -->
       <div class="mt-20 px-6 py-24 bg-lime-950 lg:px-8">        
