added certified tax advisor

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="mx-auto mt-16 max-w-7xl px-6 sm:mt-40 lg:px-8">
 
         <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-none">
-          <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Hi 👋 I'm Jed.</h2>
+          <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Hi 👋 I'm Jed, a Certified Tax Advisor.</h2>
           <div class="mt-6">
             <div class="lg:w-full lg:max-w-2xl lg:flex-auto">
               <p class="text-xl leading-8 text-gray-600">In 2010 I became obsessed with optimizing taxes and saving for my own early retirement, when I realized my CPA wasn't being proactive to really help me plan. Many CPAs can point you in the right direction, but very few of them have personally, directly used as many of the advanced strategies as I have:
