--- a/terms.html
+++ b/terms.html
@@ -19,9 +19,11 @@
       <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
         <div class="flex lg:flex-1">
           <div class="flex -m-1.5 p-1.5">
+            <a href="/">
             <span class="sr-only">Easy Tax Planning</span>
             <img class="h-12 w-auto" src="./img/etp-logo.svg" alt="">
             <img class="ml-2 mt-0.5 h-10 w-auto" src="./img/etp-logotype.svg" alt="">
+            </a>
           </div>
         </div>        
       </nav>
@@ -39,7 +41,7 @@
       </div>
   
 
-      <div class="mx-auto mt-16 max-w-7xl px-6 sm:mt-40 lg:px-8">
+      <div class="mx-auto mt-16 max-w-7xl px-6 sm:mt-10 lg:px-8">
 
         <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-none">
           <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Terms of Service</h2>
@@ -51,7 +53,7 @@
           </div>
         </div>
 
-        <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-none">
+        <div class="mx-auto max-w-2xl lg:mx-0 sm:mt-10 lg:max-w-none">
           <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Privacy Policy</h2>
           <div class="mt-6">
             <div class="lg:w-full lg:max-w-2xl lg:flex-auto">
