update booking link to Chad calendar

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <p class="mt-6">Learn how to reduce your tax bill, save more for retirement, and understand the best options for paying for college.</p>                
               </blockquote>
               <figcaption class="mt-12 text-base text-white">
-                <a href="https://cal.com/jedwood/discovery" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-lime-950 shadow-sm hover:bg-lime-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lime-500">Book a free call</a>
+                <a href="https://cal.com/easytaxplanning/consultation" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-lime-950 shadow-sm hover:bg-lime-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lime-500">Book a free call</a>
               </figcaption>
             </figure>
           </div>
@@ -166,7 +166,7 @@
       <div class="mt-20 px-6 py-24 bg-lime-950 lg:px-8">        
         <div class="mx-auto max-w-2xl text-center">
           <h2 class="text-1xl font-bold tracking-tight text-white sm:text-2xl mb-4">Let's chat.</h2>
-          <a href="https://cal.com/jedwood/discovery" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-lime-950 shadow-sm hover:bg-lime-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lime-500">Book a free call</a>
+          <a href="https://cal.com/easytaxplanning/consultation" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-lime-950 shadow-sm hover:bg-lime-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lime-500">Book a free call</a>
         </div>        
       </div>
     </main>
